--- a/build.gradle
+++ b/build.gradle
@@ -34,11 +34,10 @@ repositories {
 dependencies {
 
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.projectlombok:lombok')
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
-
-    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 def webappDir = "$projectDir/src/main/frontend"
