--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,19 @@ repositories {
 
 dependencies {
 
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+    compile group: 'org.springframework', name: 'spring-web', version: '4.3.29.RELEASE'
+    compile group: 'org.springframework', name: 'spring-tx'
 }
 
 def webappDir = "$projectDir/src/main/frontend"
