--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
+
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
 }
 
 def webappDir = "$projectDir/src/main/frontend"
