--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,14 @@ repositories {
 
 dependencies {
 
+    implementation 'junit:junit:4.12'
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
 
 def webappDir = "$projectDir/src/main/frontend"
